--- a/sdl_audio_core/build_config.json
+++ b/sdl_audio_core/build_config.json
@@ -1,22 +1,45 @@
 {
-  "detection_timestamp": "2025-08-12T14:07:44.163648",
-  "platform": "Windows",
-  "architecture": "64bit",
-  "python": {
-    "version": "3.13.5 (tags/v3.13.5:6cb20a2, Jun 11 2025, 16:15:46) [MSC v.1943 64 bit (AMD64)]",
-    "executable": "D:\\User\\RoomResponse\\.venv\\Scripts\\python.exe",
-    "platform": "Windows-10-10.0.19045-SP0",
-    "architecture": "64bit",
-    "virtual_env": true,
-    "venv_path": "D:\\User\\RoomResponse\\.venv"
+  "windows": {
+    "cuda_home": "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6",
+    "visual_studio": {
+      "vc_tools_bin_hostx64_x64": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.44.35207\\bin\\Hostx64\\x64"
+    },
+    "sdl2": {
+      "base_path": "C:\\SDL2-2.30.8"
+    }
   },
-  "compiler": {
-    "compiler": "msvc",
-    "version": "2022",
-    "edition": "Community",
-    "path": "C:\\Program Files\\Microsoft Visual Studio\\2022\\Community"
-  },
-  "sdl2_include": "C:\\Program Files\\SDL2-2.32.8\\include",
-  "sdl2_lib": "C:\\Program Files\\SDL2-2.32.8\\lib\\x64",
-  "installation_method": "manual"
+  "cuda_arch_list": [
+    "80",
+    "86",
+    "89"
+  ],
+  "project_root": "D:\\repos\\RoomResponse",
+  "msvc_cl": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.44.35207\\bin\\Hostx64\\x64\\cl.exe",
+  "msvc_tools_root": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.44.35207",
+  "winsdk_root": "C:\\Program Files (x86)\\Windows Kits\\10",
+  "cuda_home": "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6",
+  "cuda_nvcc": "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\bin\\nvcc.exe",
+  "sdl2_root": "C:\\SDL2-2.30.8",
+  "python_include": "C:\\Users\\astri\\AppData\\Local\\Programs\\Python\\Python312\\Include",
+  "python_libdir": "C:\\Users\\astri\\AppData\\Local\\Programs\\Python\\Python312\\libs",
+  "pybind11_include": "D:\\repos\\RoomResponse\\.venv\\Lib\\site-packages\\pybind11\\include",
+  "include_dirs": [
+    "D:\\repos\\RoomResponse\\.venv\\Lib\\site-packages\\pybind11\\include",
+    "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\include",
+    "D:\\repos\\RoomResponse\\pianoid_cuda",
+    "C:\\Users\\astri\\AppData\\Local\\Programs\\Python\\Python312\\Include",
+    "C:\\SDL2-2.30.8\\include"
+  ],
+  "library_dirs": [
+    "C:\\SDL2-2.30.8\\lib\\x64",
+    "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\lib\\x64",
+    "C:\\Users\\astri\\AppData\\Local\\Programs\\Python\\Python312\\libs"
+  ],
+  "libraries": [
+    "SDL2",
+    "cudart",
+    "winmm",
+    "ole32",
+    "advapi32"
+  ]
 }
