--- a/recorderConfig.json
+++ b/recorderConfig.json
@@ -3,13 +3,13 @@
   "pulse_duration": 0.019,
   "pulse_fade": 0.018,
   "cycle_duration": 1.0,
-  "num_pulses": 20,
-  "volume": 0.1,
+  "num_pulses": 5,
+  "volume": 0.65,
   "pulse_frequency": 1000.0,
   "impulse_form": "voice_coil",
   "computer": "Neumann",
-  "room": "Test8-200",
-  "num_measurements": 3,
+  "room": "Take1",
+  "num_measurements": 20,
   "input_device": 5,
   "output_device": 6,
   "series_config": {
@@ -41,29 +41,22 @@
       5
     ],
     "normalize_by_calibration": true,
-    "alignment_correlation_threshold": 0.95,
+    "alignment_correlation_threshold": 0.45,
     "alignment_target_onset_position": 0
   },
-  "last_updated": 1762287076.1262062,
+  "last_updated": 1762429531.3741922,
   "last_updated_by": "Series Settings Panel",
   "calibration_quality_config": {
-    "min_negative_peak": 0.3,
-    "max_negative_peak": 0.95,
-    "min_positive_peak": 0.0,
-    "max_positive_peak": 0.6,
-    "min_aftershock": 0.0,
-    "max_aftershock": 0.3,
-    "aftershock_window_ms": 10.0,
-    "aftershock_skip_ms": 2.0,
-    "min_valid_cycles": 3,
-    "max_precursor_ratio": 0.1,
+    "min_negative_peak": 0.6,
+    "max_negative_peak": 0.9,
+    "max_precursor_ratio": 0.2,
     "min_negative_peak_width_ms": 0.1,
     "max_negative_peak_width_ms": 0.3,
-    "max_first_positive_ratio": 1.0,
+    "max_first_positive_ratio": 1.2,
     "min_first_positive_time_ms": 0.1,
     "max_first_positive_time_ms": 0.6,
-    "max_highest_positive_ratio": 1.0,
-    "max_secondary_negative_ratio": 0.3,
+    "max_highest_positive_ratio": 1.2,
+    "max_secondary_negative_ratio": 0.5,
     "secondary_negative_window_ms": 10.0
   },
   "truncate_config": {
